syntax = "proto3";

package ai.metathings.service.deviced;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "github.com/nayotta/metathings/pkg/proto/constant/type/device.proto";
import "device.proto";
import "module.proto";

message CreateDeviceRequest {
	google.protobuf.StringValue id = 1;
	ai.metathings.constant.type.DeviceType type = 2;
	google.protobuf.StringValue name = 3;
	google.protobuf.StringValue project_id = 4;
	repeated google.protobuf.StringValue owners = 5;
	repeated google.protobuf.StringValue groups = 6;
	map<string, OpModule> modules = 7;
}

message CreateDeviceResponse {
	Device device = 1;
}
